--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eslint/js": "^9.2.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.11",
     "eslint": "^8.57.0",
     "globals": "^15.2.0",
