--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.11",
+    "@types/ws": "^8.5.10",
     "eslint": "^8.57.0",
     "globals": "^15.2.0",
     "nodemon": "^3.1.0",
@@ -30,6 +31,7 @@
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "ws": "^8.17.0"
   }
 }
