--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.ts",
+    "start": "nodemon app.js",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "dev": "tsc-watch --onSuccess \"nodemon dist/app.js\""
   },
   "author": "",
   "license": "ISC",
@@ -38,6 +38,7 @@
     "mongoose": "^8.3.4",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
+    "tsc-watch": "^6.2.0",
     "ws": "^8.17.0"
   }
 }
