--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "build": "tsc",
     "dev": "tsc-watch --onSuccess \"nodemon dist/app.js\""
   },
